# libserv

./: CMakeLists.txt  LICENCE  LICENSE  README  TODO  build_example.sh  example.c  libserv.c  libserv.h  test.c
src/: CMakeLists.txt  conn.c  libserv.c  libserv.h  serv.c  serv.h  serv.h~  serv_epoll.c  serv_epoll.h  serv_internal.h  serv_select.c  serv_select.h  serv_tcp.c  serv_tcp.h
